--- a/style-sobre.css
+++ b/style-sobre.css
@@ -1,12 +1,12 @@
 /*CABEÇALHO E GERAL*/
 html {
-    background-color: rgb(250, 7, 100);
+    background-color: rgb(47, 45, 67);
     padding: 0;
     margin: 0;
 
 }
 header {
-    background-color: #ff0460;
+    background-color: #302f4a;
 
 }
 .h1-1 {
@@ -70,25 +70,29 @@ nav a {
     text-decoration: none;
     font-weight: bold;
     font-size: 22px;
-    color: #010001;
+    color: #000000;
   
 
 }
 
 nav a:hover {
     transition: 0.5s;
-    color: rgb(255, 0, 102);
+    color: rgb(247, 241, 241);
 }
 
 /*RODAPÉ DA PÁGINA*/
 .footer1 {
     padding: 10px;
     text-align: center;
-    background-color: #fc1268;
+    background-color:#302f4a;
 }
 
 .copyright { 
     padding: 1px;
     text-align: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.cep21 {
+    width: 125px;
 }
