--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 /*CABEÇALHO E GERAL*/
 html {
-    background-color: rgb(255, 2, 90);
+    background-color: rgb(47, 45, 67);
     padding: 0;
     margin: 0;
 
 }
 header {
-    background-color: #ff0055;
+    background-color: #302f4a;
 
 }
 
@@ -34,6 +34,12 @@ header {
     top: 60px;
 
 
+}
+/*RODAPÉ DA PÁGINA*/
+.footer1 {
+    padding: 10px;
+    text-align: center;
+    background-color:#302f4a;
 }
 
 .ESTUDANTE-MANU{
@@ -66,12 +72,35 @@ nav a {
     text-decoration: none;
     font-weight: bold;
     font-size: 22px;
-    color: #000000;
+    color: #010101;
 
 }
 
 nav a:hover {
     transition: 0.5s;
-    color: rgb(251, 0, 117);
+    color: rgb(255, 255, 255);
 }
 
+.estudantes-pu {
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25% 
+
+}
+
+
+.estudante-div{
+    text-align: center;
+    padding: 16px 0;
+}
+
+
+
+.copyright { 
+    padding: 1px;
+    text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.cep21 {
+    width: 125px;
+}
